# teleprescence

./: 10060.avi  10061.avi  2.avi  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  telepresence.cfg  telepresence.cfg.bak
autom4te.cache/: output.0  requests  traces.0  traces.1
casablanca/: Project1.aps  Project1.vcxproj  Project1.vcxproj.filters  client.cpp  client.h  main.cpp  node_consumer_impl.cpp  node_consumer_impl.h  server.cpp  server.h
casablanca/Debug/: CL.read.1.tlog  CL.write.1.tlog  Project1.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  vc110.idb
cmake/modules/: LibFindMacros.cmake
include/: OpenTelepresenceConfig.h
include/opentelepresence/: OTBridge.h  OTBridgeInfo.h  OTEngine.h  OTSessionInfo.h  OTWrap.h
include/opentelepresence/patterns/: OTPatternVideoHangout.h
source/: OTBridge.cc  OTBridgeInfo.cc  OTEngine.cc  OTMixerMgrAudio.cc  OTMixerMgrVideo.cc  OTSessionInfo.cc  OTWrap.cc
source/patterns/: OTPatternVideoHangout backup 2014-11-30.cc  OTPatternVideoHangout.cc  OTPatternVideoHangout.cc.save  OTPatternVideoHangout_ante.cc
tinywrap/.svn/: wc.db
